# MyCraft_Demo

./: CMakeLists.txt  README.md  appres.rc  cglm_helper.c  cglm_helper.h  main.c
include/cglm/: common.h
include/cglm/simd/: intrin.h
lib/: libcglm.la  png_loader.c  png_loader.h
resource/shader/: 2d_polygon_fragment.glsl  2d_polygon_vertex.glsl  block_generic_fragment.glsl  block_generic_vertex.glsl  dummy_fragment_shader.glsl  font_fragment.glsl  line_fragment.glsl  line_vertex.glsl
resource/shaders/: dummy_vertex_shader.glsl
resource/texture/: crosshair.psd  font_ubuntu.psd  generic_blocks.psd
src/: block.c  block.h  chunk.c  chunks.c  chunks.h  debug.c  debug.h  glutils.c  glutils.h  main.c  misc_helper.c  misc_helper.h  model.c  model.h  mycraft.h  player.c  player.h  shader_loader.c  shader_loader.h  texel.c  texel.h  thread.c  thread.h  util.c  util.h  utils.c  utils.h  world.c  world.h
